<resources>
    <string name="app_name">Final Project</string>

    <string name="last_product">جديد ترين محصولات</string>
    <string name="most_points_product">بهترین محصولات</string>
    <string name="most_view_product">پر بازدید ترین محصولات</string>
    <string name="product_description">توضيحات محصول</string>
    <string name="description_product_image">product image</string>
    <string name="button_add_to_cart">افزودن به سبد خرید</string>
    <string name="button_continue_cart">ادامه فرآیند خرید</string>

    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>

    <string name="product_price">%1$s تومان</string>
    <string name="number_of_products">%1$d كالا</string>
    <string name="menu_item_account">Account</string>
    <string name="menu_item_cart">Cart</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_notification">Notification</string>
    <string name="sum_price">مجموع</string>
    <string name="cart_summaries">خلاصه سبد</string>
    <string name="text_view_cart_products_price">قیمت کالاها</string>
    <string name="text_view_cart_sum_reduction">تخفیف کالاها</string>
    <string name="text_view_cart_sum_price">جمع سبد خرید</string>
    <string name="login_text">برای ورود یا ثبت نام پست الکترونیک خود را وارد نمایید.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_text">ایمیل</string>
    <string name="password_text">گذرواژه</string>
    <string name="username_text">نام کاربری</string>
    <string name="first_name_text">نام</string>
    <string name="last_name_text">نام خانوادگی</string>
    <string name="address_text">آدرس</string>
    <string name="login_button">ورود یا ثبت نام</string>
    <string name="sign_up_button">ثبت نام</string>
    <string name="cancel_button">لغو</string>
    <string name="toast_add_to_cart">محصول به سبد خرید افزوده شد</string>
    <string name="sort_most_sale">پرفروش ترین</string>
    <string name="sort_most_expensive">گران ترین</string>
    <string name="sort_most_cheap">ارزان ترین</string>
    <string name="sort_most_new">جدید ترین</string>
    <string name="all_category_product">همه کالاهای این دسته</string>


    <string name="notification_channel_id">woocommerce_channel_id</string>
    <string name="notification_channel_name">woocommerce Channel</string>
    <string name="notification_channel_description">
        This is notification channel for woocommerce</string>

    <string name="new_product_title">New Product</string>
    <string name="new_product_text">You have new Product.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>