<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/product_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tabGravity="center"
            app:tabIndicatorGravity="bottom"
            app:tabInlineLabel="false"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/sort_most_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_most_sale" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/sort_most_expensive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_most_expensive" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/sort_most_cheap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_most_cheap" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/sort_most_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort_most_new" />
        </com.google.android.material.tabs.TabLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_category_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_products_number"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:text="تبلت"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_sort" />

        <TextView
            android:id="@+id/category_products_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="1458 کالا"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_sort" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>